# medisure.ai

./: README.md
medisure-ai-backend-4874b60d9380591b433e899995d5cce6c3773183/: .flake8  .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  main.py  pyproject.toml  requirements.txt  summarize_documents.py
medisure-ai-backend-4874b60d9380591b433e899995d5cce6c3773183/PageRank_summarizer/: pagerank_summarizer.py
medisure-ai-backend-4874b60d9380591b433e899995d5cce6c3773183/deeplearning_text_summarization/: requirements.txt  summarize_documents.py
medisure-ai-backend-4874b60d9380591b433e899995d5cce6c3773183/resources/: Appeal_letter_generation_prompts.txt  Field_extraction_from_denial_letter_prompt.txt  Generation.txt  aetnaleap_tabular_example.txt  chatbot_questions.txt  claim_denied_mine_reason_prompt.txt  denial_letter.txt  reason_mining_prompt.txt
medisure-ai-backend-4874b60d9380591b433e899995d5cce6c3773183/scripts/: gpt.py  vision.py
medisure-ai-extension-master/: README.md  contentScript.js  manifest.json  options.html  package-lock.json  package.json  popup.html  summary.html
medisure-ai-extension-master/css/: popup.css
medisure-ai-extension-master/js/: eventPage.js  index.js  options.js  popup.js  summary.js
medisure-ai-frontend-master/: .firebaserc  .gitignore  README.md  package.json
medisure-ai-frontend-master/public/: index.html
medisure-ai-frontend-master/src/: index.js  routes.js
medisure-ai-frontend-master/src/assets/css/: black-dashboard-react.css
medisure-ai-frontend-master/src/views/: Ask.js  Home.js  Letter.js  Summary.js
(+10 files in other folders)
