[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Abhijit Gupta <avgupta456@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.14.0"
Flask = "^1.1.2"
openai = "^0.2.4"
gunicorn = "^20.0.4"
google-cloud-vision = "^1.0.0"
google-cloud-storage = "^1.31.0"
grpcio = "^1.32.0"
google-cloud-documentai = "^0.2.0"
flask-cors = "^3.0.9"
summa = "^1.2.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
